--- a/client/src/components/Auth/Auth.css
+++ b/client/src/components/Auth/Auth.css
@@ -19,7 +19,7 @@
 }
 
 .submit-button {
-    color: #ca2121 !important;
+    color: #ffffff !important;
     background-color: #000 !important;
 }
 
